# ycloud-components-cli

./: .env.development  .gitignore  .npmrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  install.sh  metadata.example.json  metadata.json  package.json  plan.md  pnpm-lock.yaml  tsup.config.ts  uninstall.sh  update.sh
scripts/: build-all-targets.mjs  build-target.mjs  copy-current-binary.mjs  install.sh  platform-binaries.mjs  release-gitlab.sh
skills/: SKILL.md
skills/ycloud-components/: SKILL.md  SKILL.zh-CN.md  SKILL.zh.md
src/: cli.ts  constants.ts  env.d.ts  main.rs
src/commands/: demo.ts  doc.ts  info.ts  list.ts  mcp.ts  meta.ts  semantic.ts  skill.ts
src/data/: v1.0.0.json
src/mcp/: tools.ts
src/schema/: metadata.ts
src/types/: commands.ts  index.ts
src/utils/: error.ts  loader.ts  output.ts  preflight.ts  remote-loader.ts  tools.ts  update-detector.ts  version.ts
tests/: cli.rs
