[package]
name = "ycloud-components-cli"
version = "2.0.0-beta.0"
edition = "2021"

[[bin]]
name = "ycc"
path = "src/main.rs"

[dependencies]
serde_json = { version = "1.0", features = ["preserve_order"] }
ureq = { version = "2.12", features = ["json"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.13"
